--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,10 @@
     color: blue; }
     .red a span {
       color: pink; }
+
+#main-nav {
+  background: #032f3e; }
+
+section h1 {
+  font-size: 24px;
+  color: #032f3e; }
