--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,29 @@
 
 #main-nav {
   background: #032f3e; }
+  #main-nav ul {
+    width: 100%;
+    list-style-type: none; }
+  #main-nav li {
+    float: left;
+    width: 14%;
+    text-decoration: none; }
+  #main-nav a {
+    color: #f8f9fb;
+    text-decoration: none;
+    padding: 16px;
+    display: block;
+    text-align: center; }
+
+#main-nav ul:after {
+  content: "";
+  display: block;
+  clear: both; }
 
 section h1 {
   font-size: 24px;
   color: #032f3e; }
+
+* {
+  margin: 0;
+  padding: 0; }
