--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,12 +15,40 @@
 //Variables
 $deepBlue: #032f3e;
 $sectionHeadding: 24px;
+$offWhite: #f8f9fb;
 
 #main-nav{
     background: $deepBlue;
+    ul{
+        width:100%;   
+        list-style-type: none;     
+    }
+    li{
+        float:left;
+        width:14%;
+        text-decoration:none;
+    }
+    a{
+        color: $offWhite;
+        text-decoration:none;
+        padding:16px;
+        display:block;
+        text-align: center;
+    }
+}
+
+#main-nav ul:after{
+    content:"";
+    display:block;
+    clear:both;
 }
 
 section h1{
     font-size: $sectionHeadding;
     color:$deepBlue;
+}
+
+*{
+    margin:0;
+    padding:0;
 }
