--- a/css/styles.css
+++ b/css/styles.css
@@ -32,4 +32,49 @@ section h1 {
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: Arial; }
+
+.lead-banner {
+  width: 100%;
+  position: relative;
+  color: white;
+  text-align: right; }
+  .lead-banner .banner-content {
+    position: absolute;
+    top: 50px;
+    width: 100%; }
+  .lead-banner img {
+    width: 100%; }
+  .lead-banner span {
+    font-size: 46px;
+    display: block;
+    text-transform: uppercase;
+    font-weight: bold; }
+  .lead-banner span.title {
+    font-weight: normal;
+    margin-bottom: 35px; }
+
+.lessons-banner {
+  width: 100%;
+  position: relative;
+  color: white; }
+  .lessons-banner .banner-content {
+    position: absolute;
+    top: 50px;
+    width: 100%; }
+  .lessons-banner img {
+    width: 100%; }
+  .lessons-banner span {
+    font-size: 46px;
+    display: block;
+    text-transform: uppercase;
+    font-weight: bold; }
+  .lessons-banner span.title {
+    font-weight: normal;
+    margin-bottom: 35px; }
+  .lessons-banner li {
+    text-transform: uppercase;
+    font-size: 20px;
+    max-width: 500px;
+    margin: 60px 0; }
