--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,34 @@
 $deepBlue: #032f3e;
 $sectionHeadding: 24px;
 $offWhite: #f8f9fb;
+$bannerHeading:46px;
+$fontFamily: Arial;
+
+//Mixins
+
+@mixin banner{
+    width: 100%;
+    position: relative;
+    color:white;
+    .banner-content{
+        position: absolute;
+        top:50px;
+        width:100%;
+    }
+    img{
+        width:100%;
+    }
+    span{
+        font-size: $bannerHeading;
+        display:block;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
+    span.title{
+        font-weight:normal;
+        margin-bottom:35px;
+    }
+}
 
 #main-nav{
     background: $deepBlue;
@@ -51,4 +79,20 @@ section h1{
 *{
     margin:0;
     padding:0;
+    font-family: $fontFamily;
+}
+
+.lead-banner{
+    @include banner;
+    text-align: right;
+}
+
+.lessons-banner{
+    @include banner;
+    li{
+        text-transform: uppercase;
+        font-size:20px;
+        max-width: 500px;
+        margin:60px 0;
+    }
 }
