--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,59 +1,17 @@
-//exaxmple
-
-.red {
-    color:red;
-
-    a {
-        color:blue;
-
-        span {
-            color:pink;
-        }
-    }
-}
-
-//Variables
-$deepBlue: #032f3e;
-$sectionHeadding: 24px;
-$offWhite: #f8f9fb;
-$bannerHeading:46px;
-$fontFamily: Arial;
-
-//Mixins
-
-@mixin banner{
-    width: 100%;
-    position: relative;
-    color:white;
-    .banner-content{
-        position: absolute;
-        top:50px;
-        width:100%;
-    }
-    img{
-        width:100%;
-    }
-    span{
-        font-size: $bannerHeading;
-        display:block;
-        text-transform: uppercase;
-        font-weight: bold;
-    }
-    span.title{
-        font-weight:normal;
-        margin-bottom:35px;
-    }
-}
+@import "reset";
+@import "variables";
+@import "mixins";
 
 #main-nav{
     background: $deepBlue;
     ul{
         width:100%;   
-        list-style-type: none;     
+        list-style-type: none; 
+        @include clearfix;  
     }
     li{
         float:left;
-        width:14%;
+        width:(100%/6);
         text-decoration:none;
     }
     a{
@@ -62,25 +20,19 @@ $fontFamily: Arial;
         padding:16px;
         display:block;
         text-align: center;
+        &:hover{
+            background-color: #333;
+        }
     }
 }
 
-#main-nav ul:after{
-    content:"";
-    display:block;
-    clear:both;
-}
 
 section h1{
     font-size: $sectionHeadding;
     color:$deepBlue;
 }
 
-*{
-    margin:0;
-    padding:0;
-    font-family: $fontFamily;
-}
+
 
 .lead-banner{
     @include banner;
@@ -94,5 +46,31 @@ section h1{
         font-size:20px;
         max-width: 500px;
         margin:60px 0;
+    }
+}
+
+#services{
+    margin-bottom:60px;
+    li{
+        float:left;
+        box-sizing:border-box;
+        text-align: center;
+        width:(100% / 3);
+    }
+    img{
+        width:60%;
+        margin:20px 20%;
+    }
+    a{
+        text-decoration: none;
+        color:$deepBlue;
+        font-weight: bold;
+        &:hover{
+            color:red;
+        }
+    }
+    ul{
+        @include clearfix;
+
     }
 }
