--- a/css/styles.css
+++ b/css/styles.css
@@ -112,3 +112,13 @@ section h1 {
     content: "";
     display: block;
     clear: both; }
+
+#projects li {
+  float: left;
+  width: 23.5%;
+  margin-right: 2%;
+  margin-bottom: 2%; }
+  #projects li:nth-child(4n) {
+    margin-right: 0; }
+  #projects li img {
+    width: 100%; }
