if state ment and color functions

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,10 @@ li {
       clear: both; }
   #main-nav li {
     float: left;
-    width: 16.66667%;
-    text-decoration: none; }
+    width: 16.66667%; }
+    @media screen and (max-width: 600px) {
+      #main-nav li {
+        width: 100%; } }
   #main-nav a {
     color: #f8f9fb;
     text-decoration: none;
@@ -42,7 +44,7 @@ li {
     display: block;
     text-align: center; }
     #main-nav a:hover {
-      background-color: #333; }
+      background-color: #044156; }
 
 section h1 {
   font-size: 24px;
@@ -64,6 +66,9 @@ section h1 {
     display: block;
     text-transform: uppercase;
     font-weight: bold; }
+    @media screen and (max-width: 3000px) and (min-width: 1200px) {
+      .lead-banner span {
+        font-size: 68px; } }
   .lead-banner span.title {
     font-weight: normal;
     margin-bottom: 35px; }
@@ -83,6 +88,9 @@ section h1 {
     display: block;
     text-transform: uppercase;
     font-weight: bold; }
+    @media screen and (max-width: 3000px) and (min-width: 1200px) {
+      .lessons-banner span {
+        font-size: 68px; } }
   .lessons-banner span.title {
     font-weight: normal;
     margin-bottom: 35px; }
@@ -107,7 +115,7 @@ section h1 {
     color: #032f3e;
     font-weight: bold; }
     #services a:hover {
-      color: red; }
+      color: #3e1203; }
   #services ul:after {
     content: "";
     display: block;
