--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -15,10 +15,13 @@
     }
     span{
         font-size: $bannerHeading;
-        display:block;
+        display: block;
         text-transform: uppercase;
         font-weight: bold;
-    }
+        @include mQ(3000px, 1200px){
+          font-size: 68px;
+        }
+      }
     span.title{
         font-weight:normal;
         margin-bottom:35px;
@@ -42,3 +45,17 @@
       margin-right: 0;
     }
   }
+
+  @mixin mQ($args...){
+    @if length($args) == 1{
+      @media screen and (max-width: nth($args, 1)){
+        @content;
+      }
+    }
+    @if length($args) == 2{
+      @media screen and (max-width: nth($args, 1)) and (min-width: nth($args, 2)){
+        @content;
+      }
+    }
+  }
+  
